# Page_Array_Proyect

./: .gitignore  CMakeLists.txt  README.md
src/Algorithms/: Algorithm1.cpp  Algorithm1.h  Algorithm2.cpp  Algorithm2.h  Algorithm3.cpp  Algorithm3.h  Algorithm4.cpp  Algorithm4.h  Algorithm5.cpp  Algorithm5.h
src/generator/: generator.cpp
src/sorter/: PagedArray.cpp  PagedArray.h  sorter.cpp
